--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,6 @@ PhD candidate in Economics — Paris-Dauphine University (PSL) LEDa - DIAL
 
 ## Latest
 
--   **Working paper:** [*From Fields to Ballots: Droughts and Electoral Shifts in Brazil*](files/From_Fields_to_Ballots.pdf){target="_blank"} (Preliminary draft)
+-   **Preliminary draft:** [*From Fields to Ballots: Droughts and Electoral Shifts in Brazil*](files/From_Fields_to_Ballots.pdf){target="_blank"}
 
 -   **Talk:** [*Göttingen Workshop on Ibero-American Development*](https://www.uni-goettingen.de/en/events/659948.html){target="_blank"} (September 24, 2025)
